--- a/pwa/src/app/home/home.page.html
+++ b/pwa/src/app/home/home.page.html
@@ -7,15 +7,25 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-button (click)="logout()" color="danger" class="logout">Logout</ion-button>
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+  <ion-button (click)="logout()" color="danger" class="logout">Logout</ion-button>
+  <div class="page">
+    <div class="card">
+      <p>Computer Parts</p>
+    </div>
+    <div class="card">
+      <p>Coding</p>
+    </div>
+    <div class="card">
+      <p>IT News</p>
+    </div>
   </div>
 </ion-content>
+
+<ion-footer>
+  <ion-button class="footer-button" icon="Home"><ion-icon name="Home"></ion-icon></ion-button>
+  <ion-button class="footer-button" icon="Home"><ion-icon name="Search"></ion-icon></ion-button>
+  <ion-button class="footer-button" icon="Home"><ion-icon name="Add"></ion-icon></ion-button>
+  <ion-button class="footer-button" icon="Home"><ion-icon name="notifications"></ion-icon></ion-button>
+  <ion-button class="footer-button" icon="Home"><ion-icon name="person"></ion-icon></ion-button>
+</ion-footer>
