--- a/pwa/src/app/home/search/search.page.html
+++ b/pwa/src/app/home/search/search.page.html
@@ -1,13 +1,39 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>search</ion-title>
-  </ion-toolbar>
-</ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">search</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <div class="bg">
+
+    <div class="top">
+      <div class="search">
+        <div class="sIcon"></div>
+        <input type="text" placeholder="Search">
+      </div>
+    </div>
+
+    <div class="content">
+      <p>IDEAS FOR YOU</p>
+
+      <div class="card">
+        <img src="assets/images/4.jpg">
+        <p>Computer Set<br> Up Ideas</p>
+      </div>
+
+      <div class="card">
+        <img src="assets/images/1.jpg">
+        <p>PC<br> Assembly</p>
+      </div>
+
+      <div class="card">
+        <img src="assets/images/6.png">
+        <p>Computer<br> Parts</p>
+      </div>
+
+      <div class="card">
+        <img src="assets/images/7.jpg">
+        <p>IT<br> News</p>
+      </div>
+
+      
+    </div>
+
+  </div>
 </ion-content>
