--- a/pwa/src/app/home/dashboard/dashboard.page.scss
+++ b/pwa/src/app/home/dashboard/dashboard.page.scss
@@ -1,17 +1,3 @@
-.page{
-    display: flex;
-    justify-content: space-around;
-    align-self: center;
-    flex-direction: row;
-    flex-wrap: wrap;
-    width: 300px;
-    margin-left: auto ;
-    top: -15px;
-    width: auto;
-    height: auto;
-    z-index: 999;
-    background-color: antiquewhite;
-  }
 
   .all{
     display: flex;
@@ -22,79 +8,64 @@
     color: black;
     background-color: antiquewhite;
   }
-  
-  .card{
+
+  .list{
+    background-color: antiquewhite;
+    position: relative;
+    display: inline-block;
+    width: auto;
+    height: auto;
+    color: wheat;
+    margin: 0px;
+    padding: 10px;
+    margin-top: -15px;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    flex-direction: row;
+  }
+
+  .item{
+    padding: 0px;
+    margin: 0px;
     border: 2px solid blue;
-    width: 135px;
-    height: 250px;
     margin: 10px;
     border-radius: 20px;
+    background-size: cover;
+    color: white;
+    z-index: 999;
+    width: 125px;
+    height: 250px;
   }
 
-  .image1{
-    background-image: url(../dashboard/Resources/1.jpg);
-    background-size: cover;
+  .item:hover{
+    border: 3px solid green;
+    
+  }
+
+  .item img{
+    display: block;
+    border-radius: 17px;
+    object-fit: cover;
     width: 100%;
     height: 100%;
-    border-radius: 20px;
+    
   }
 
-  .image2{
-    background-image: url(../dashboard/Resources/2.jpg);
-    background-size: cover;
-    width: 100%;
-    height: 100%;
-    border-radius: 20px;
+  .desc{
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 20px;
+    color: black;
+    position: absolute;
+    padding: 0px;
+    margin: 0px;
+    padding-right: 5px;
+    margin-top: 200px;
+    text-align: center;
+    z-index: 9999;
+    background-color: rgba(antiquewhite, 0.7);
+    border-radius: 0px 10px 10px 0px;
   }
-
-  .image3{
-    background-image: url(../dashboard/Resources/3.jpg);
-    background-size: cover;
-    width: 100%;
-    height: 100%;
-    border-radius: 20px;
-  }
-
-  .image4{
-    background-image: url(../dashboard/Resources/4.jpg);
-    background-size: cover;
-    width: 100%;
-    height: 100%;
-    border-radius: 20px;
-  }
-
-  .image5{
-    background-image: url(../dashboard/Resources/5.jpg);
-    background-size: cover;
-    width: 100%;
-    height: 100%;
-    border-radius: 20px;
-  }
-
-  .image6{
-    background-image: url(../dashboard/Resources/6.png);
-    background-size: cover;
-    width: 100%;
-    height: 100%;
-    border-radius: 20px;
-  }
-
-  .image7{
-    background-image: url(../dashboard/Resources/7.jpg);
-    background-size: cover;
-    width: 100%;
-    height: 100%;
-    border-radius: 20px;
-  }
-
-  .image8{
-    background-image: url(../dashboard/Resources/8.png);
-    background-size: cover;
-    width: 100%;
-    height: 100%;
-    border-radius: 20px;
-  }
-
 
   .background{
     position: absolute;
@@ -105,13 +76,18 @@
     background-color: antiquewhite;
     background-size: cover;
     z-index: 999;
-}
+  }
 
 ion-tab-button{
   background-color: white;
   color: black;
-}
+  }
 
 ion-content{
   overflow-y: auto;
-}
+  }
+
+  .save{
+    position: relative;
+    top: 20px;
+  }
