--- a/pwa/src/app/home/home.page.html
+++ b/pwa/src/app/home/home.page.html
@@ -11,7 +11,7 @@
       <ion-label>Search</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="search">
+    <ion-tab-button (click)="openModal()">
       <ion-icon name="add"></ion-icon>
       <ion-label>Share</ion-label>
     </ion-tab-button>
