--- a/pwa/src/app/home/notification/notification.page.html
+++ b/pwa/src/app/home/notification/notification.page.html
@@ -1,13 +1,18 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>notification</ion-title>
+    <ion-title class="title">Notification</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">notification</ion-title>
-    </ion-toolbar>
-  </ion-header>
+
+<div class="background">
+  <div class="notif">
+    <div class="message" *ngFor="let notif of notificationList">
+      <p>{{notif.message}}</p>
+      
+    </div>
+  </div>
+</div>
+  
 </ion-content>
