--- a/pwa/src/app/home/profile/profile.page.scss
+++ b/pwa/src/app/home/profile/profile.page.scss
@@ -47,7 +47,7 @@
 
 
 .profile-image{
-    background-image: url(../profile/Resources/profile-user.png);
+    background-image: url(/assets/images/profile-user.png);
     background-size: cover;
     width: 100px;
     height: 100px;
@@ -80,6 +80,13 @@
     border-radius: 20px;
 }
 
+.profName{
+  padding: 0px;
+  margin: 0%;
+  color: black;
+  z-index: 999;
+}
+
 .all{
     display: flex;
     justify-content: center;
@@ -100,46 +107,72 @@
     z-index: 999;
 }
 
-.image1{
-    background-image: url(../dashboard/Resources/1.jpg);
-    background-size: cover;
-    width: 100%;
-    height: 100%;
-    border-radius: 20px;
+.list{
+  background-color: antiquewhite;
+  width: auto;
+  height: auto;
+  color: wheat;
+  margin: 0px;
+  padding: 10px;
+  margin-top: 20px;
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  flex-direction: row;
+}
+
+.item{
+  padding: 0px;
+  margin: 0px;
+  border: 2px solid blue;
+  margin: 10px;
+  border-radius: 20px;
+  background-size: cover;
+  color: white;
+  z-index: 999;
+  width: 125px;
+  height: 250px;
+}
+
+.item:hover{
+  border: 3px solid green;
+  
+}
+
+.item img{
+  border-radius: 17px;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  z-index: 999;
+  
+}
+
+.desc{
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 20px;
+  color: black;
+  position: absolute;
+  padding: 0px;
+  margin: 0px;
+  padding-right: 5px;
+  margin-top: 200px;
+  text-align: center;
+  z-index: 9999;
+  background-color: rgba(antiquewhite, 0.7);
+  border-radius: 0px 10px 10px 0px;
+}
+
+  ion-list{
+    border: 2px solid white;
   }
 
-.image2{
-    background-image: url(../dashboard/Resources/2.jpg);
-    background-size: cover;
-    width: 100%;
-    height: 100%;
-    border-radius: 20px;
-  }
-.image3{
-    background-image: url(../dashboard/Resources/3.jpg);
-    background-size: cover;
-    width: 100%;
-    height: 100%;
-    border-radius: 20px;
-  }
-.image4{
-    background-image: url(../dashboard/Resources/4.jpg);
-    background-size: cover;
-    width: 100%;
-    height: 100%;
-    border-radius: 20px;
-  }
-  .image5{
-    background-image: url(../dashboard/Resources/5.jpg);
-    background-size: cover;
-    width: 100%;
-    height: 100%;
-    border-radius: 20px;
-  }
-  .image6{
-    background-image: url(../dashboard/Resources/6.png);
-    background-size: cover;
-    width: 100%;
-    height: 100%;
-    border-radius: 20px;
+  .logout{
+    position: absolute;
+    padding: 0px;
+    margin: 0px;
+    font-size: 10px;
+    top: 10px;
+    right: 10px;
+    z-index: 999;
   }
