--- a/pwa/src/app/login/login.page.scss
+++ b/pwa/src/app/login/login.page.scss
@@ -4,7 +4,7 @@
     right: auto;
     width: 100%;
     height: 100%;
-    background-image: url(../ResourceFolder/BG.jpg);
+    background-image: url(/assets/images/BG.jpg);
     background-size: cover;
 }
 
