--- a/pwa/src/app/signup/signup.page.scss
+++ b/pwa/src/app/signup/signup.page.scss
@@ -5,7 +5,7 @@
     right: auto;
     width: 100vw;
     height: 104vh;
-    background-image: url(../ResourceFolder/BG.jpg);
+    background-image: url(/assets/images/BG.jpg);
     background-size: cover;
 }
 
