--- a/pwa/src/app/home/search/search.page.html
+++ b/pwa/src/app/home/search/search.page.html
@@ -2,12 +2,8 @@
 <ion-content [fullscreen]="true">
   <div class="bg">
 
-    <div class="top">
-      <div class="search">
-        <div class="sIcon"></div>
-        <input type="text" placeholder="Search">
-      </div>
-    </div>
+    <ion-searchbar class="search"></ion-searchbar>
+
 
     <div class="content">
       <p>IDEAS FOR YOU</p>
