--- a/pwa/src/app/home/profile/profile.page.html
+++ b/pwa/src/app/home/profile/profile.page.html
@@ -1,23 +1,5 @@
 
 <ion-content [fullscreen]="true">
-  <section class="fab">
-    <ion-fab vertical="" horizontal="end" slot="fixed">
-      <ion-fab-button>
-          <ion-icon name="add"></ion-icon>
-      </ion-fab-button>
-      <ion-fab-list side="top">
-          <ion-fab-button href="https://www.facebook.com/ValenzuelaITSociety">
-              <ion-icon name="logo-facebook"></ion-icon>
-          </ion-fab-button>
-          <ion-fab-button>
-              <ion-icon name="logo-twitter"></ion-icon>
-          </ion-fab-button>
-          <ion-fab-button>
-              <ion-icon name="logo-instagram"></ion-icon>
-          </ion-fab-button>
-      </ion-fab-list>
-    </ion-fab>
-  </section>
 
   <div class="all">
     <div class="profile-image"></div>
@@ -36,7 +18,7 @@
     <div class="list">
       <div *ngFor="let prof of userProfile" class="item">
         <p class="desc">{{prof.desc}}</p>
-        <img src="{{prof.link}}" alt="Displayed Image" (click)="openModal(prof.id, prof.link, prof.desc, prof.message, prof.react, prof)">
+        <img src="{{prof.link}}" alt="Displayed Image" (click)="openModal(prof)">
       </div>
     </div>
   </div>
