--- a/pwa/src/app/home/search/search.page.scss
+++ b/pwa/src/app/home/search/search.page.scss
@@ -5,24 +5,14 @@
     z-index: -1;
 }
 
-.top{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100px;
-    margin-bottom: -20px;
-}
 
 .search{
+    top: 15px;
     display: flex;
     flex-direction: row;
     align-content: center;
     justify-content: center;
-    margin: 10px;
-    padding-left: 20px;
-    border: 2px solid white;
-    background-color: white;
+    color: white;
     border-radius: 15px;
     z-index: 99;
 }
