--- a/pwa/src/app/login/login.page.html
+++ b/pwa/src/app/login/login.page.html
@@ -1,20 +1,15 @@
 <ion-content [fullscreen]="true">
-  <img class="background">
-  
-    <h1 class="loginText"><b>LOGIN</b></h1>
-    
-    <pre class="login-container">
-      
-      <ion-item>
-        <ion-label position="floating">Email</ion-label>
-        <ion-input type="text" [(ngModel)]="email"></ion-input>
-      </ion-item>
-      <ion-item>
-        <ion-label position="floating">Password</ion-label>
-        <ion-input type="password" [(ngModel)]="password"></ion-input>
-      </ion-item>
-  
-    <ion-button (click)="Login()" color="success" class="login">Login</ion-button>
-    <ion-button (click)="signupPage()" class="signup">SignUp</ion-button>
-    </pre>
+
+  <h1>Login to Your Account</h1>
+
+  <div class="background">
+    <div class="buttons-div">
+      <ion-searchbar search-icon="mail-outline" placeholder="Email" [(ngModel)]="email"></ion-searchbar>
+      <ion-searchbar type="password" search-icon="lock-closed-outline" placeholder="Password" [(ngModel)]="password"></ion-searchbar>
+      <ion-button (click)="Login()" color="success" class="signup">LOGIN</ion-button>
+      <ion-button (click)="signupPage()" class="login">SIGNUP</ion-button>
+    </div>
+  </div>
+
+
   </ion-content>
