--- a/pwa/src/app/login/login.page.scss
+++ b/pwa/src/app/login/login.page.scss
@@ -1,76 +1,48 @@
 .background{
-    position: absolute;
-    top: auto;
-    right: auto;
-    width: 100%;
-    height: 100%;
-    background-image: url(/assets/images/BG.jpg);
-    background-size: cover;
+    height: 100vh;
+    background-color: black;
 }
 
-.login-container {
+h1{
+    z-index: 999;
+    position: absolute;
+    top: 20px;
+    margin: 0px;
+    color: antiquewhite;
+    font-family: 'Times New Roman', Times, serif;
+    width: 100%;
+    text-align: center;
+}
+
+.buttons-div{
+    background-color: antiquewhite;
+    position: absolute;
+    bottom: 0px;
+    border-radius: 15px 15px 0px 0px;
+    width: 100%;
+    height: 400px;
     display: flex;
-    margin-top: 200px;
     justify-content: center;
     align-items: center;
-    justify-self: center;
-    align-self: center;
     flex-direction: column;
-    color: black;
-    background-color: #fff;
-    border-radius: 8px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    z-index: 999;
+    animation: design 2s;
 }
 
-h2 {
-    text-align: center;
-    margin-bottom: 20px;
+@keyframes design {
+    from {
+        bottom: -400px;
+    }
+    to {
+        bottom: 0px;
+    }
 }
 
-input[type="text"],
-input[type="password"] {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 15px;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    box-sizing: border-box;
-}
-
-button {
-    width: 100%;
-    padding: 10px;
-    border: none;
-    border-radius: 4px;
-    background-color: #007bff;
-    color: #fff;
-    cursor: pointer;
-}
-
-button:hover {
-    background-color: #0056b3;
-}
-
-.loginText{
-    position: absolute;
-    top: 130px;
-    left: 130px;
-    z-index: 100;
-    color: rgb(9, 206, 59); 
-    font-family:Impact;
-    padding-top: 10px; 
-    padding-bottom: 50px; 
-    font-size: 25px;
+ion-searchbar{
+    border-radius: 50%;
 }
 
 .signup{
-    font-size: 10px;
-    border: 2px solid black;
-}
-
-.login{
-    font-size: 25px;
-    border: 2px solid black;
-
+    margin-top: 20px;
+    border-radius: 30px;
+    width: 200px;
 }
