--- a/pwa/src/app/home/notification/notification.page.html
+++ b/pwa/src/app/home/notification/notification.page.html
@@ -11,6 +11,7 @@
     <div class="message" *ngFor="let notif of notificationList">
       <p>{{notif.message}}</p>
     </div>
+    <a (click)="deleteNotif()" class="deleteNotif">Delete All</a>
   </div>
 </div>
   
