--- a/pwa/src/app/home/notification/notification.page.scss
+++ b/pwa/src/app/home/notification/notification.page.scss
@@ -47,3 +47,8 @@ ion-content{
     margin: 10px;
     border-radius: 15px;
 }
+
+.deleteNotif{
+    color: black;
+    text-decoration: underline;
+}
