--- a/pwa/src/app/home/profile/profile.page.scss
+++ b/pwa/src/app/home/profile/profile.page.scss
@@ -11,6 +11,12 @@
     
 }
 
+.deleteCont{
+  position: absolute;
+  font-size: 10px;
+  padding-left:80px;
+}
+
 .background1{
     position: absolute;
     top: 0px;
