--- a/pwa/src/app/start-page/start-page.page.html
+++ b/pwa/src/app/start-page/start-page.page.html
@@ -4,11 +4,11 @@
     <img src="/assets/images/AppLogo.png" alt="">
   </div>
   <div class="background">
-    <h1>Welcome to <br>Universe</h1>
+    <h1>Welcome to Universe</h1>
     <div class="buttons-div">
       <ion-button color="primary" class="button" (click)="login()">Login</ion-button>
       <p>- or -</p>
-      <ion-button color="tertiary" class="button" (click)="signup()">Signup</ion-button>
+      <ion-button color="warning" class="button" (click)="signup()">Signup</ion-button>
     </div>
     
   </div>
