--- a/pwa/src/app/home/home.page.html
+++ b/pwa/src/app/home/home.page.html
@@ -7,18 +7,18 @@
     </ion-tab-button>
 
     <ion-tab-button tab="search">
-      <ion-icon name="Search"></ion-icon>
-      <ion-label>Search</ion-label>
+      <ion-icon name="library-outline"></ion-icon>
+      <ion-label>Other</ion-label>
     </ion-tab-button>
 
     <ion-tab-button (click)="openModal()">
-      <ion-icon name="add"></ion-icon>
+      <ion-icon name="cloud-upload-outline"></ion-icon>
       <ion-label>Share</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="notification">
       <ion-icon name="notifications"></ion-icon>
-      <ion-label>Notification</ion-label>
+      <ion-label>Inbox</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="profile">
