--- a/pwa/src/app/home/dashboard/content/content.component.scss
+++ b/pwa/src/app/home/dashboard/content/content.component.scss
@@ -45,6 +45,9 @@
     font-family: 'Times New Roman', Times, serif;
     font-size: 35px;
     color: black;
+    border-top: 2px solid black;
+    border-bottom: 2px solid black;
+    border-left: 2px solid black;
     position: absolute;
     width: 230px;
     height: 50px;
@@ -64,6 +67,9 @@
   .backBTN{
     position: absolute;
     color: black;
+    border-top: 2px solid black;
+    border-bottom: 2px solid black;
+    border-right: 2px solid black;
     font-size: 20px;
     top: 5px;
     width: 50px;
