--- a/pwa/src/app/home/profile/info/info.component.html
+++ b/pwa/src/app/home/profile/info/info.component.html
@@ -9,28 +9,24 @@
       </div>
     </div>
 
-    <div class="edit">
+    <div class="edit" *ngFor="let information of userInformation">
       <ion-item>
-        <ion-input label="Name" placeholder="Name"></ion-input>
+        <ion-input [(ngModel)]="information.name" label="Name:" placeholder={{information.name}}></ion-input>
       </ion-item>
 
       <ion-item>
-        <ion-input label="Bio" labelPlacement="stacked" placeholder="Describe yourself..."></ion-input>
+        <ion-input [(ngModel)]="information.bio" label="bio" labelPlacement="stacked" placeholder={{information.bio}}></ion-input>
       </ion-item>
 
       <ion-item>
-        <ion-input label="Gender" placeholder="Male or Female"></ion-input>
+        <ion-input [(ngModel)]="information.gender" label="Gender:" placeholder={{information.gender}}></ion-input>
       </ion-item>
 
       <ion-item>
-        <ion-input label="Age" placeholder="Age"></ion-input>
+        <ion-input [(ngModel)]="information.age" label="Age:" placeholder={{information.age}}></ion-input>
       </ion-item>
 
-      <ion-item>
-        <ion-input label="Number" placeholder="+63"></ion-input>
-      </ion-item>
-
-      <ion-button color="warning" class="done">Apply</ion-button>
+      <ion-button color="warning" class="done" (click)="apply(information)">Apply</ion-button>
     </div>
 
 
