--- a/pwa/src/app/home/profile/info/info.component.scss
+++ b/pwa/src/app/home/profile/info/info.component.scss
@@ -27,6 +27,7 @@
     padding: 0px;
     margin: 0%;
     color: black;
+    font-size: 20px;
     z-index: 999;
   }
   
@@ -48,7 +49,7 @@
     position: absolute;
     top: 170px;
     width: 100%;
-    height: 300px;
+    height: 450px;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -58,6 +59,7 @@
 
 ion-item{
     width: 100%;
+    padding: 10px;
 }
 
 .done{
