--- a/pwa/src/app/home/search/search.page.scss
+++ b/pwa/src/app/home/search/search.page.scss
@@ -46,15 +46,16 @@ input:focus{
     align-items: center;
     flex-direction: column;
     width: 100%;
-    height: 540px;
+    height: 100%;
+    padding-bottom: 20px;
 }
 
-.content .card{
+.card{
     display: flex;
     align-items: center;
     justify-content: center;
     width: 250px;
-    height: 100px;
+    height: 130px;
     border: 2px solid blue;
     border-radius: 15px;
 }
