--- a/pwa/src/app/home/dashboard/dashboard.page.scss
+++ b/pwa/src/app/home/dashboard/dashboard.page.scss
@@ -14,7 +14,7 @@
     position: relative;
     display: inline-block;
     width: auto;
-    height: auto;
+    min-height: 100%;
     color: wheat;
     margin: 0px;
     padding: 10px;
