--- a/pwa/src/app/home/profile/info/info.component.html
+++ b/pwa/src/app/home/profile/info/info.component.html
@@ -19,7 +19,7 @@
       </ion-item>
 
       <ion-item>
-        <ion-input [(ngModel)]="information.gender" label="Gender:" placeholder={{information.gender}}></ion-input>
+        <ion-input [(ngModel)]="information.gender" label="Gender:" placeholder="{{information.gender}}"></ion-input>
       </ion-item>
 
       <ion-item>
