--- a/pwa/src/app/home/notification/notification.page.html
+++ b/pwa/src/app/home/notification/notification.page.html
@@ -8,9 +8,13 @@
 
 <div class="background">
   <div class="notif">
-    <div class="message" *ngFor="let notif of notificationList">
+    <div [style.backgroundColor]="color" class="message" *ngFor="let notif of notificationList">
       <p>{{notif.message}}</p>
+      <div class="deleteNotif">
+        <a (click)="delete(notif)">Delete</a>
+      </div>
     </div>
+    <a class="changeColor" (click)="changeColor()">{{readAll}}</a>
   </div>
 </div>
   
