--- a/pwa/src/app/home/profile/profile.page.scss
+++ b/pwa/src/app/home/profile/profile.page.scss
@@ -95,6 +95,11 @@
   z-index: 999;
 }
 
+.profName h2{
+  color: black;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
 .bio{
   margin-top: -10px;
   width: 300px;
