--- a/pwa/src/app/home/dashboard/content/content.component.scss
+++ b/pwa/src/app/home/dashboard/content/content.component.scss
@@ -57,7 +57,7 @@
     margin-top: 5px;
     text-align: center;
     z-index: 9999;
-    background-color: rgba(antiquewhite, 0.4);
+    background-color: rgba(antiquewhite, 0.8);
     border-radius: 10px 0px 0px 10px;
     display: flex;
     justify-content: center;
@@ -79,7 +79,7 @@
     padding-right: 0px;
     text-align: center;
     z-index: 99999;
-    background-color: rgba(antiquewhite, 0.4);
+    background-color: rgba(antiquewhite, 0.8);
     border-radius: 0px 10px 10px 0px;
   }
 
@@ -94,6 +94,11 @@
     justify-content: space-between;
     align-items: center;
     flex-direction: column;
+    text-shadow: 
+            -1px -1px 0 #000,  
+            1px -1px 0 #000,
+            -1px  1px 0 #000,
+            1px  1px 0 #000;
   }
 
   ion-button{
@@ -110,6 +115,7 @@
     width: 100%;
     height: 100%;
     color: white;
+    filter: drop-shadow(2px 2px black);
   }
 
   ion-button:active{
