--- a/pwa/src/app/home/search/search.page.html
+++ b/pwa/src/app/home/search/search.page.html
@@ -6,17 +6,22 @@
       <p>IDEAS FOR YOU</p>
 
       <div class="card">
+        <img src="assets/images/News.png" (click)="openAll()">
+        <p>ALL</p>
+      </div>
+
+      <div class="card">
         <img src="assets/images/4.jpg" (click)="openComset()">
         <p>Computer Set<br> Up Ideas</p>
       </div>
 
       <div class="card">
-        <img src="assets/images/1.jpg" (click)="openMain()">
+        <img src="assets/images/1.jpg" (click)="openAssembly()">
         <p>PC<br> Assembly</p>
       </div>
 
       <div class="card">
-        <img src="assets/images/7.jpg" (click)="openAll()">
+        <img src="assets/images/7.jpg" (click)="openNews()">
         <p>IT<br> News</p>
       </div>
 
