--- a/pwa/src/app/home/dashboard/content/content.component.html
+++ b/pwa/src/app/home/dashboard/content/content.component.html
@@ -16,5 +16,5 @@
     </div>
   </div>
 
-  <ion-tab-button class="backBTN" (click)="back()"><ion-icon color="danger" name="return-up-back-outline"></ion-icon></ion-tab-button>
+  <ion-tab-button class="backBTN" (click)="back()"><ion-icon color="light" name="return-up-back-outline"></ion-icon></ion-tab-button>
   </ion-content>
